# QuanTrade

./: .gitignore  GITHUB_TOKEN.md  OPTIMIZATION_PLAN_v2.0.2.md  QUANTRADE_2.0.1_REPORT.md  QUANTRADE_2.0_SUMMARY.md  QUANTRADE_2.1_PLAN.md  Quantrade2.0.md  README.md  TECHNICAL_REPORT_v2.0.2c.md  analyze_contribution.py  analyze_strategy.py  analyze_thresholds.py  app.py  backtest_report_v2.0.1.txt  calc_buy_hold.py  check_buy_hold.py  check_etf_prices.py  cleanup_report.md  cross_market_data.py  daily_run.py  daily_signal_report.py  daily_update.py  debug_returns.py  debug_returns2.py  debug_returns3.py  debug_v2.0.1.py  diagnose_root_cause.py  download_gold_data.py  evaluator_agent.py  expand_data_baostock.py  expand_etf_data.py  expand_full_data.py  expand_full_data_v2.py  expand_full_data_v3.py  fix_backtest.py  geopolitical_engine.py  gold_hedge.py  optimize_trading_rules.py  optimize_v2.py  optimize_v2_all8.py  (+68 more)
.github/workflows/: ci.yml
QuanTrade/: READMEquant_signal_plan.md
QuanTrade/quant_system/: .env.example  .gitignore  demo_forecast.py  deploy.md  kline_plotter.py  requirements.txt  signal_bot.py  test_fixes.py  trend_forecaster.py
data_test/: kimi_price.csv  kimi_realtime.csv
quant_system/scripts/: backtest_v1.1.py  backtest_v4_r3_trend_crash.py  feature_engineering_v5.py  fetch_train_data_v1.1_baostock.py  fetch_train_data_v1.1_batch.py  fetch_train_data_v5.py  generate_predictions_v1.1.py  model_train_v1.1.py  select_train_stocks_v1.1.py
tests/: conftest.py  test_data_store.py  test_feature_engine.py  test_strategies.py
(+53 files in other folders)
