[project]
name = "quantrade"
version = "0.1.0"
description = "A股量化信号系统 - ML+LLM驱动的交易信号生成与推送"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0,<2.2.0",
    "numpy>=1.24.0,<2.0.0",
    "akshare>=1.14.0",
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.0,<1.6.0",
    "optuna>=3.5.0",
    "bt>=1.1.0",
    "ffn>=1.1.0",
    "requests>=2.31.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
quant-signal = "signal_bot:main"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["QuanTrade/quant_system"]
